<resources>
    <string name="app_name">Studiac</string>
    <string name="onstarttext">A platform designed to</string>
    <string name="onstarttext1">make your education more productive</string>
    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>
    <string name="viewRoutine_prompt_1">Swipe left/right to navigate</string>
    <string name="viewRoutine_prompt_2">Tap on the item you wish to change</string>
    <string name="viewRoutine_prompt_3">Done already? Tap on the button below </string>
    <string name="profileSetUp1_University_EditText">Enter your University name</string>
    <string name="profileSetUp1_Department_EditText">Enter your Department name</string>
    <string name="profileSetUp1_EnterValue_EditText">Enter</string>
    <string name="profileSetUp1_University_Text">University Name</string>
    <string name="profileSetUp1_Department_Text">Department Name</string>
    <string name="profileSetUp1_EnterValue_Text1">Current Semester</string>
    <string name="profileSetUp1_EnterValue_Text2">Total Semester</string>
    <string name="profileSetUp1_Next_Btn">NEXT</string>
    <string name="profileSetUp1_text">You need to setup your profile first"</string>
    <string name="profileSetup2_Course_EditText">Enter Course Name</string>
    <string name="profileSetup2_CourseCode_EditText">Enter Course Code</string>
    <string name="profileSetup2_Credit_EditText">Enter Credit</string>
    <string name="profileSetup2_Type_EditText">Enter Type</string>
    <string name="profileSetup2_Course_Text">Course Name</string>
    <string name="profileSetup2_CourseCode_Text">Course Code</string>
    <string name="profileSetup2_Credit_Text">Course Credit</string>
    <string name="profileSetup2_Type_Text">Course Type</string>
    <string name="profileSetup2_AddCourse_Btn">Add course</string>
    <string name="profileSetup2_AddLater_Btn">Add Later</string>
    <string name="profileSetup2_Text2">Add Routine</string>
    <string name="profileSetup2_Text3">Feeling lazy?  </string>
    <string name="creatAccount_title">Create a new account</string>
    <string name="createAccount_Name_EditText">Enter your full name</string>
    <string name="createAccount_Email_EditText">Enter your email</string>
    <string name="createAccount_Password_EditText">Enter your password</string>
    <string name="createAccount_ReTypePassword_EditText">Enter your password again</string>
    <string name="createAccount_Name_Text">Full Name</string>
    <string name="createAccount_Email_Text">Email</string>
    <string name="createAccount_Password_Text">Password</string>
    <string name="createAccount_ReTypePassword_Text">Confirm Password</string>
    <string name="createAccount_Btn">CREATE ACCOUNT</string>
    <string name="createAccount_SignIn_Btn">Sign In</string>
    <string name="creatAccount_HaveAccount_text">Already Have an account? </string>
    <string name="forgotPassword_Email_EditText">Enter your email</string>
    <string name="forgotPassword_Email_Text">Email</string>
    <string name="forgotPassword_Confirm_Btn">CONFIRM</string>
    <string name="forgotPassword_SignIn_Btn">Sign In</string>
    <string name="forgotPassword_Text">Recalled already? </string>
    <string name="logIn_Text1">Let\'s begin</string>
    <string name="logIn_Text2">Don\'t have an account? </string>
    <string name="logIn_Text3">Forgot Password?</string>
    <string name="logIn_Text4">Sign in with</string>
    <string name="logIn_Text5">- OR -</string>
    <string name="logIn_Email_EditText">Enter your email</string>
    <string name="logIn_Email_Text">Email</string>
    <string name="logIn_Password_EditText">Enter your password</string>
    <string name="logIn_Password_Text">Password</string>
    <string name="logIn_Btn">LOGIN</string>
    <string name="logIn_SignUp_Btn">Sign up</string>
    <string name="LogInIncorrect_text">Incorrect credentials</string>
    <string name="LogInIncorrect_text1">entered.</string>
    <string name="alert1buttontext">OK</string>
    <string name="SelectImage_text">Go on. Pick an image!</string>
    <string name="SelectImage_Btn">NEXT</string>
    <string name="courseaddedDescription">The course has been added successfully.</string>
    <string name="courseaddedtext">Course Added</string>
    <string name="courseaddedbuttontext">Add more</string>
    <string name="courseaddedbuttontext1">Continue</string>
    <string name="forgotPasswordEmailSent_text">A temporary password</string>
    <string name="forgotPasswordEmailSent_text1">has been sent to your email. Log into your account with the password.</string>
    <string name="addroutinetext">Add routine</string>
    <string name="addroutinetext1">Add </string>
    <string name="addroutinebuttontext1">Done</string>
    <string name="fieldRequiredPrompt">* required</string>
    <string name="sampleTextBulletin">lorem epsum</string>
    <string name="Header_Others">Others</string>
    <string name="Header_SelfStudy">Self Study</string>
    <string name="Header_Course">Course</string>
    <string name="Header_CurrentTasks">Current Tasks</string>
    <string name="SelectType_text">Tags</string>
    <string name="SelectDay_Btn">SELECT</string>
    <string name="SelectDay_Text">Select Day</string>
    <string name="RadioButtonDayOne">Sunday</string>
    <string name="RadioButtonDayTwo">Monday</string>
    <string name="RadioButtonDayThree">Tuesday</string>
    <string name="RadioButtonDayFour">Wednesday</string>
    <string name="RadioButtonDayFive">Thursday</string>
    <string name="RadioButtonDaySix">Friday</string>
    <string name="RadioButtonDaySeven">Saturday</string>
    <string name="RadioButtonTypeOne">Mid</string>
    <string name="RadioButtonTypeTwo">Final</string>
    <string name="RadioButtonTypeThree">Lab Quiz</string>
    <string name="RadioButtonTypeFour">Lab Assignment</string>
    <string name="RadioButtonTypeFive">Presentation</string>
    <string name="RadioButtonTypeSix">Case Work</string>
    <string name="RadioButtonTypeSeven">Project</string>
    <string name="selectButton">Select</string>
    <string name="viewRoutineHolidayPrompt"> It\'s a Holiday! </string>
    <string name="ViewRoutine_Hint_Text"> Swipe right/left to navigate.</string>
    <string name="ViewRoutine_Text1">Practical</string>
    <string name="ViewRoutine_Text2">Lecture</string>
    <string name="dialogTextTitle">Course Details</string>
    <string name="dialogTextCourseName">Course Name</string>
    <string name="dialogTextCourseCredit">Course Credit</string>
    <string name="dialogTextCourseCode">Course Code</string>
    <string name="dialogTextInstructor">Instructor</string>
    <string name="dialogTextInstructorInfo">Instructor Info</string>
    <string name="dialogTextContact">Contact</string>
    <string name="dialogTextRoom">Room</string>
    <string name="dialogTextCounselling">Counselling Hours</string>
    <string name="dialogTextCourseCreditInput">3.0</string>
    <string name="dialogTextCourseCodeInput">MATH123</string>
    <string name="dialogTextInstructorInput">Name</string>
    <string name="dialogTextContactInput">Email/Phone</string>
    <string name="dialogTextRoomInput">7A04</string>
    <string name="dialogTextCounsellingInput">Something</string>
    <string name="dialogTextContinueBtn">CONTINUE</string>
    <string name="UpdateBtnText">UPDATE</string>
    <string name="dialogTextCloseBtn">CLOSE</string>
    <string name="Unavailable">N/A</string>
    <string name="AddCounsellingHoursFragment">AddCounsellingHoursFragment</string>
    <string name="Bulletin_Category1">All</string>
    <string name="Bulletin_Category2">Official</string>
    <string name="Bulletin_Category3">Advertisement</string>
    <string name="Bulletin_Category4">Help</string>
    <string name="Bulletin_Category5">Others</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="bulletin_board_delete_it_text">Delete it?</string>
    <string name="bulletin_board_sure_text">Are you sure?</string>
    <string name="bulletin_board_button_confirm_text">CONFIRM</string>
    <string name="bulletin_board_button_cancel_text">Cancel</string>
    <string name="ContentDescriptionTopicImage">TopicImage</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person" />
    <string name="loading">Loading…</string>
    <string name="ReportBug_InputPrompt">Enter A Brief Description</string>
    <string name="ReportBug_ButtonPrompt">SEND BUG REPORT</string>
    <string name="ReportBug_Description1">Bugs Are Annoying</string>
    <string name="ReportBug_Description2">Bugs in an app is no better than the bugs at home. Help us to find them.</string>
    <string name="ReportBug_InputHeader">Bug Description</string>
    <string name="profile_changes">profileChanges</string>
    <string name="current_activity">current_activity</string>
    <string name="device_token">device_token</string>
    <string name="activityResultTrackerCGPA">CGPA : N / A </string>
    <string name="activityResultTrackerItemSemester">Semester 3</string>
    <string name="activityResultTrackerGPA">GPA : N/A</string>
    <string name="activityResultTrackerCoursesTaken">Courses Taken : N/A</string>
    <string name="SemesterGPA_GPAResult_EditText">Enter GPA</string>
    <string name="SemesterGPA_CoursesTaken_EditText">Enter Courses Taken</string>
    <string name="SemesterGPA_TotalCreditsResultDisplay_EditText">Enter Total Credits Completed</string>
    <string name="SemesterGPA_GPAResult_Text">GPA</string>
    <string name="SemesterGPA_CoursesTaken_Text">Courses</string>
    <string name="SemesterGPA_TotalCreditsResultDisplay_Text">Total Credits</string>
    <string name="SemesterGPA_Btn">Enter</string>
    <string name="SemesterGPA_Text1">Enter Semester Info</string>
    <string name="CalculateSemesterGPA_Text">Calculate Semester GPA</string>
    <string name="CalculateSemesterGPA_Btn">CALCULATE</string>
    <string name="enterGPAResultDisplayDialog">GPA : 3.389</string>
    <string name="enterCourseResultDisplayDialog">Courses Taken : 6</string>
    <string name="enterButtonResultDisplayDialog">Continue</string>
    <string name="updateButton">Update</string>
    <string name="gpaTextViewI">GPA : 3.693 </string>
    <string name="numberOfCourseTextViewI">Courses Taken : </string>
    <string name="continueButtonText">CONTINUE</string>
    <string name="semesterResult_Text">Semester Result</string>
    <string name="SemesterResultDisplay_Btn">CONTINUE</string>
    <string name="SemesterResultDisplay_text1">Semester Result</string>
    <string name="SemesterResultDisplay_text2">GPA :</string>
    <string name="SemesterResultDisplay_text3">Courses Taken :</string>
    <string name="resultTrackerBottomSheetGPATEXT">GPA : 2.565</string>
    <string name="resultTrackerBottomSheetCalculateButton">Calculate</string>
    <string name="resultTrackerItemDialogPointHint">4.0</string>
    <string name="resultTrackerItemSemesterGPACourseHint">Course 1234</string>
    <string name="resultTrackerItemDialogGradeHint">A+</string>
    <string name="ChangePassword_Button_text">CHANGE PASSWORD</string>
    <string name="ChangePassword_OldPassword_EditText">Enter Old Password</string>
    <string name="ChangePassword_OldPassword_Text">Old Password</string>
    <string name="ChangePassword_NewPassword_EditText">Enter New Password</string>
    <string name="ChangePassword_NewPassword_Text">New Password</string>
    <string name="ChangePassword_RetypePassword_EditText">Enter Password Again</string>
    <string name="ChangePassword_RetypePassword_Text">Re-type Password</string>
</resources>