<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background_vividblue">

    <TextView
        android:id="@+id/dialog_viewCourse_courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="40dp"
        android:textAlignment="center"
        android:paddingEnd="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="Course Name"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/dialog_viewCourse_continue_button_id"
        android:layout_width="119dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/ripple_effect_common_button"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextContinueBtn"
        android:textAlignment="center"
        android:textColor="@color/colorVividBlue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_viewCourse_courseName"
        app:layout_constraintStart_toStartOf="@+id/dialog_viewCourse_courseName"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_marginLeft="55dp"
        android:layout_width="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextCourseCredit"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_viewCourse_courseName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextCourseCode"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/dialog_viewCourse_courseCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_viewCourse_courseName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dialogTextCourseCodeInput"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />


    <TextView
        android:id="@+id/dialog_viewCourse_instructorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_viewCourse_courseName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dialogTextInstructorInput"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextCounselling"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"

        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dialog_viewCourse_counsellingHours_button_id"
        android:layout_width="34dp"
        android:layout_height="22dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@null"
        android:elevation="0dp"
        android:paddingTop="5dp"
        android:scaleType="center"
        android:src="@drawable/common_ic_more"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:fabCustomSize="36dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:maxImageSize="45dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextRoom"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"

        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/dialog_viewCourse_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_viewCourse_courseName"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dialogTextRoomInput"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/dialog_viewCourse_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_viewCourse_courseName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dialogTextContactInput"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextContact"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/dialogTextInstructor"
        android:layout_marginTop="40dp"

        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/dialog_viewCourse_courseCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_viewCourse_courseName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dialogTextCourseCreditInput"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

</androidx.constraintlayout.widget.ConstraintLayout>