<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingBottom="15dp"
    android:background="@drawable/shape_background_vividblue">

    <TextView
        android:id="@+id/addroutine_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="Select Day"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/constraintLayout"
        android:layout_width="250dp"
        android:layout_height="272dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/shape_background_cute_blue_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addroutine_text_id" />


    <RadioGroup
        android:id="@+id/dialog_day_radio_group_id"
        android:layout_width="150dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <RadioButton
            android:id="@+id/radioButtonOne"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:buttonTint="@color/colorVividBlue"
            android:checked="true"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/RadioButtonDayOne"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonTwo"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="@string/RadioButtonDayTwo"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonThree"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="@string/RadioButtonDayThree"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonFour"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:text="@string/RadioButtonDayFour"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/radioButtonfive"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="@string/RadioButtonDayFive"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <RadioButton
            android:id="@+id/radioButtonSix"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="@string/RadioButtonDaySix"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonSeven"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:buttonTint="@color/colorVividBlue"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/RadioButtonDaySeven"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </RadioGroup>


    <Button
        android:id="@+id/dialog_day_picker_button_id"
        android:layout_width="120dp"
        android:layout_marginTop="15sp"
        android:layout_height="37dp"
        android:background="@drawable/ripple_effect_common_button"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/selectButton"
        android:textAllCaps="true"
        android:textColor="@color/colorVividBlue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>