<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.settings.ChangePasswordActivity">

    <Button
        android:id="@+id/change_password_button_id"
        style="@style/EditTextShadowStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/ButtonHeightLarge"
        android:layout_marginBottom="@dimen/ButtonBottomHeight"
        android:background="@drawable/shape_background_cute_blue_rounded"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/ChangePassword_Button_text"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/change_password_retype_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_retype_id" />

    <EditText
        android:id="@+id/change_password_old_id"
        style="@style/EditTextShadowStyle"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="@dimen/EditTextHeightNormal"
        android:background="@drawable/shape_input_ash_3"
        android:drawableStart="@drawable/settings_ic_password_lock_ash"
        android:drawableEnd="@drawable/ic_eye_invisible_ash"
        android:drawablePadding="@dimen/EditTextDrawablePadding"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/EditTextGap"
        android:hint="@string/ChangePassword_OldPassword_EditText"
        android:inputType="textPassword"
        android:paddingStart="@dimen/EditTextDrawablePaddingStart"
        android:paddingEnd="@dimen/EditTextDrawablePaddingStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/SettingsSubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/ChangePassword_OldPassword_Text"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/change_password_old_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_old_id" />


    <EditText
        android:id="@+id/change_password_new_id"
        style="@style/EditTextShadowStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/EditTextHeightNormal"
        android:background="@drawable/shape_input_ash_3"
        android:drawableStart="@drawable/settings_ic_password_lock_ash"
        android:drawableEnd="@drawable/ic_eye_invisible_ash"
        android:drawablePadding="@dimen/EditTextDrawablePadding"
        android:layout_marginTop="@dimen/EditTextGap"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/ChangePassword_NewPassword_EditText"
        android:inputType="textPassword"
        android:paddingStart="@dimen/EditTextDrawablePaddingStart"
        android:paddingEnd="@dimen/EditTextDrawablePaddingStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/change_password_old_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_old_id"
        app:layout_constraintTop_toBottomOf="@+id/change_password_old_id" />

    <TextView
        style="@style/SettingsSubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/ChangePassword_NewPassword_Text"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/change_password_new_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_new_id" />


    <EditText
        android:id="@+id/change_password_retype_id"
        style="@style/EditTextShadowStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/EditTextHeightNormal"
        android:background="@drawable/shape_input_ash_3"
        android:drawableStart="@drawable/settings_ic_password_lock_ash"
        android:drawableEnd="@drawable/ic_eye_invisible_ash"
        android:drawablePadding="@dimen/EditTextDrawablePadding"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/EditTextGap"
        android:hint="@string/ChangePassword_RetypePassword_EditText"
        android:inputType="textPassword"
        android:paddingStart="@dimen/EditTextDrawablePaddingStart"
        android:paddingEnd="@dimen/EditTextDrawablePaddingStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/change_password_new_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_new_id"
        app:layout_constraintTop_toBottomOf="@+id/change_password_new_id" />

    <TextView
        style="@style/SettingsSubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/ChangePassword_RetypePassword_Text"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/change_password_retype_id"
        app:layout_constraintStart_toStartOf="@+id/change_password_retype_id" />
</androidx.constraintlayout.widget.ConstraintLayout>